--- a/contact.html
+++ b/contact.html
@@ -4,42 +4,27 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Home Page</title>
+   <title>Contact Page</title>
    <link rel="stylesheet" href="styles/styles.css">
    <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
 </head>
 <body>
-   <header class="indexHeader wrapper">
+   <header class="wrapper contactHeader">
       <nav>
          <a href="index.html">
             <img src="../images/from-elora-pautrat-behance.PNG" alt="logo">
          </a>
-
+      
          <ul>
             <li><a href="about.html">about</a></li>
             <li><a href="contact.html">contact</a></li>
          </ul>
       </nav>
 
-      <div class="helloDiv">
-         <h1>Hello! My name is Jaren Frani and I am a Front-End Developer.</h1>
-         <div class="shapes">
-            <div class="square"></div>
-            <div class="triangle"></div>
-            <div class="line"></div>
-            <div class="circle"></div>
-         </div>
+      <div class="contactDiv">
+         <p><strong>email: </strong> franijaren@gmail.com</p>
+         <p><strong>LinkedIn: </strong></p>
       </div>
-
-      <div class="seeWork">
-         <a href="about.html">See my work here ></a>
-      </div>
-
-      <div class="verticalText verticalLine"></div>
-      <h2 class="verticalIndex">01</h2>
-      <div class="dot"></div>
-      <div class="dot lighter"></div>
-      <div class="dot lightest"></div>
    </header>
 </body>
 </html>
