done all styling. just need media queries for both page

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
    <header class="indexHeader wrapper">
       <nav>
          <a href="index.html">
-            <img src="../images/from-elora-pautrat-behance.PNG" alt="logo">
+            <img src="./assets/logo.png" alt="logo of a letter j inside a curly bracket">
          </a>
 
          <ul>
             <li><a href="about.html">about</a></li>
-            <li><a href="contact.html">contact</a></li>
          </ul>
       </nav>
+      <!-- end of nav -->
 
       <div class="helloDiv">
          <h1>Hello! My name is Jaren Frani and I am a Front-End Developer.</h1>
@@ -28,13 +28,13 @@
             <div class="triangle"></div>
             <div class="line"></div>
             <div class="circle"></div>
-         </div>
-      </div>
-
+         </div> <!-- end of .shapes -->
+      </div> <!-- end of .helloDiv -->
+      
       <div class="seeWork">
          <a href="about.html">See my work here ></a>
-      </div>
-
+      </div> <!-- end of .seeWork -->
+      
       <div class="verticalText verticalLine"></div>
       <h2 class="verticalIndex">01</h2>
       <div class="dot"></div>
