done media queries for index.html and added icons for skills

--- a/about.html
+++ b/about.html
@@ -35,6 +35,22 @@
       </section>
       <!-- end of .bio section -->
 
+      <section class="icons">
+         <ul>
+            <li><i class="fab fa-html5"></i></li>
+            <li><i class="fab fa-css3-alt"></i></li>
+            <li><i class="fab fa-sass"></i></li>
+            <li><i class="fab fa-js"></i></li>
+            <li><i class="fab fa-react"></i></li>
+            <li><i class="far fa-folder-open"></i></li>
+            <li><i class="fas fa-cogs"></i></li>
+            <li><i class="fab fa-github"></i></li>
+            <li><i class="fab fa-git-alt"></i></li>
+            <li><i class="fas fa-universal-access"></i></li>
+            <li><i class="fas fa-laptop-code"></i></li>
+         </ul>
+      </section>
+
       <div class="verticalText verticalLine"></div>
       <h2 class="verticalAbout">scroll</h2>
       <div class="dot"></div>
