put in icons but commented them out for now

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       </section>
       <!-- end of .bio section -->
 
-      <section class="icons">
+      <!-- <section class="icons">
          <ul>
             <li><i class="fab fa-html5"></i></li>
             <li><i class="fab fa-css3-alt"></i></li>
@@ -49,7 +49,7 @@
             <li><i class="fas fa-universal-access"></i></li>
             <li><i class="fas fa-laptop-code"></i></li>
          </ul>
-      </section>
+      </section> -->
 
       <div class="verticalText verticalLine"></div>
       <h2 class="verticalAbout">scroll</h2>
