final edit before submitting

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
          
          <div class="bioAboutMe">
             <h1>About me:</h1>
-            <p>When I started this career change in year 2021, I had very little expectation of what the outcome will be. All my career years were spent working as a clerical support and I had no knowledge of any programming language whatsoever. And now, fast forwarding to the last day of the 9-week Web Development Bootcamp of Juno College of Technology, I am still surprise that I was able to do 5 projects in a span of 9 weeks. What amazes me more is I enjoyed every step of the development process from problem solving to seeing your very own website being live. I am very grateful and thrilled to start this new career journey and to continuously expand my skills and knowledge of Web Development.</p>
+            <p>When I started this career change in year 2021, I had very little expectation of what the outcome will be. All my career years were spent working as a clerical support and I had no knowledge of any programming language whatsoever. And now, fast forwarding to the last day of the 9-week Web Development Bootcamp of Juno College of Technology, I am still surprise that I was able to do 5 projects, which are showcased below, in a span of 9 weeks. What amazes me more is I enjoyed every step of the development process from problem solving to seeing your very own website being live. I am very grateful and thrilled to start this new career journey and to continuously expand my skills and knowledge of Web Development.</p>
          </div> <!-- end of .bioAboutMe -->
       </section>
       <!-- end of .bio section -->
@@ -51,11 +51,11 @@
          </ul>
       </section> -->
 
-      <div class="verticalText verticalLine"></div>
+      <div class="verticalText verticalLine opacity"></div>
       <h2 class="verticalAbout">scroll</h2>
-      <div class="dot"></div>
-      <div class="dot lighter"></div>
-      <div class="dot lightest"></div>
+      <div class="dot opacity"></div>
+      <div class="dot lighter opacity"></div>
+      <div class="dot lightest opacity"></div>
    </header>
    <!-- end of header -->
    
@@ -83,12 +83,12 @@
          </div> <!-- end of .imgDiv -->
       </section>
       
-      <section>
+      <section class="projects">
          <div class="hDiv">
             <h3>2</h3>
             <div class="paraContainer">
                <p class="projectTitle">Movie finder</p>
-               <p class="programs">html, css, sass, javascript, APIs | 2022</p>
+               <p class="programs">html, sass, javascript, APIs | 2022</p>
             </div> <!-- end of .paraContainer -->
          </div> <!-- end of .hDiv -->
 
@@ -106,7 +106,7 @@
          </div> <!-- end of .imgDiv -->
       </section>
 
-      <section>
+      <section class="projects">
          <div class="hDiv">
             <h3>3</h3>
             <div class="paraContainer">
@@ -129,7 +129,7 @@
          </div> <!-- end of .imgDiv -->
       </section>
 
-      <section>
+      <section class="projects">
          <div class="hDiv">
             <h3>4</h3>
             <div class="paraContainer">
@@ -152,7 +152,7 @@
          </div> <!-- end of .imgDiv -->
       </section>
 
-      <section>
+      <section class="projects">
          <div class="hDiv">
             <h3>5</h3>
             <div class="paraContainer">
