final edit part 4

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
    <!-- end of header -->
    
    <main class="wrapper mainAbout">
-      <section class="firstProject">
+      <section class="projects">
          <div class="hDiv">
             <h3>1</h3>
             <div class="paraContainer">
@@ -83,7 +83,7 @@
          </div> <!-- end of .imgDiv -->
       </section>
       
-      <section class="projects">
+      <section class="projectTwo">
          <div class="hDiv">
             <h3>2</h3>
             <div class="paraContainer">
