--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
          </div> <!-- end of .imgDiv -->
       </section>
 
-      <section class="projects">
+      <section class="projects smallScreen">
          <div class="hDiv">
             <h3>3</h3>
             <div class="paraContainer">
@@ -129,7 +129,7 @@
          </div> <!-- end of .imgDiv -->
       </section>
 
-      <section class="projects">
+      <section class="projects smallScreen">
          <div class="hDiv">
             <h3>4</h3>
             <div class="paraContainer">
