added favicon and aria labels on icons

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+   <link type="image" href="assets/from-studio-tikamon-site.PNG" rel="icon">
 </head>
 <body>
    <header class="wrapper aboutHeader">
@@ -41,9 +42,7 @@
       <!-- end of .bio section -->
 
       <section class="arrow">
-         <a href="">
-            <i class="fas fa-angle-double-down"></i>
-         </a>
+         <i class="fas fa-angle-double-down" aria-hidden="true"></i>
       </section>
    </header>
    <!-- end of header -->
@@ -54,47 +53,47 @@
       <section class="icons">
          <ul>
             <li>
-               <i class="fab fa-html5"></i>
+               <i class="fab fa-html5" aria-hidden="true"></i>
                <p>html</p>
             </li>
             <li>
-               <i class="fab fa-css3-alt"></i>
+               <i class="fab fa-css3-alt" aria-hidden="true"></i>
                <p>css</p>
             </li>
             <li>
-               <i class="fab fa-sass"></i>
+               <i class="fab fa-sass" aria-hidden="true"></i>
                <p>sass</p>
             </li>
             <li>
-               <i class="fab fa-js"></i>
+               <i class="fab fa-js" aria-hidden="true"></i>
                <p>javascript</p>
             </li>
             <li>
-               <i class="fab fa-react"></i>
+               <i class="fab fa-react" aria-hidden="true"></i>
                <p>react</p>
             </li>
             <li>
-               <i class="far fa-folder-open"></i>
+               <i class="far fa-folder-open" aria-hidden="true"></i>
                <p>firebase</p>
             </li>
             <li>
-               <i class="fas fa-cogs"></i>
+               <i class="fas fa-cogs" aria-hidden="true"></i>
                <p>api</p>
             </li>
             <li>
-               <i class="fab fa-github"></i>
+               <i class="fab fa-github" aria-hidden="true"></i>
                <p>githib</p>
             </li>
             <li>
-               <i class="fab fa-git-alt"></i>
+               <i class="fab fa-git-alt" aria-hidden="true"></i>
                <p>cmder</p>
             </li>
             <li>
-               <i class="fas fa-laptop-code"></i>
+               <i class="fas fa-laptop-code" aria-hidden="true"></i>
                <p>responsive</p>
             </li>
             <li>
-               <i class="fas fa-universal-access"></i>
+               <i class="fas fa-universal-access" aria-hidden="true"></i>
                <p>accessibility</p>
             </li>
          </ul>
@@ -114,10 +113,10 @@
                <p>For this project, we needed to convert the design provided into a multi-page, functional and responsive in all screen sizes website. Styling was required to be done in SASS. Accessibility is also an important part of this project among other things. </p>
                <div class="externalLink">
                   <a href="https://github.com/jfrani5/jaren-frani-project-1.git">
-                     <i class="fab fa-github"></i>
+                     <i class="fab fa-github" aria-label="link to github"></i>
                   </a>
                   <a href="https://willow-project1.netlify.app/">
-                     <i class="fas fa-share-square"></i>
+                     <i class="fas fa-share-square" aria-label="link to website"></i>
                   </a>
                </div> <!-- end of .externalLink -->
             </div> <!-- end of .paradiv -->
@@ -144,10 +143,10 @@
                <p>Built with: Linda Shen</p>
                <div class="externalLink">
                   <a href="https://github.com/P2-Movie-App/movie-finder-app.git">
-                     <i class="fab fa-github"></i>
+                     <i class="fab fa-github" aria-label="link to github"></i>
                   </a>
                   <a href="https://movie-finder-app-p2.netlify.app/">
-                     <i class="fas fa-share-square"></i>
+                     <i class="fas fa-share-square" aria-label="link to website"></i>
                   </a>
                </div> <!-- end of .externalLink -->
             </div> <!-- end of .paradiv -->
@@ -172,10 +171,10 @@
                   fetch results from a third-party API. App is responsive to all screen sizes and is accessible for screen readers.</p>
                <div class="externalLink">
                   <a href="https://github.com/jfrani5/jaren-frani-project-3.git">
-                     <i class="fab fa-github"></i>
+                     <i class="fab fa-github" aria-label="link to github"></i>
                   </a>
                   <a href="https://events-app-project-3.netlify.app/">
-                     <i class="fas fa-share-square"></i>
+                     <i class="fas fa-share-square" aria-label="link to website"></i>
                   </a>
                </div> <!-- end of .externalLink -->
             </div> <!-- end of .paradiv -->
@@ -202,10 +201,10 @@
                <p>Built with: Saana Selvan, Akeem Foster, Andre Shotwell</p>
                <div class="externalLink">
                   <a href="https://github.com/Juno-College-Project4/Backronym-Generator.git">
-                     <i class="fab fa-github"></i>
+                     <i class="fab fa-github" aria-label="link to github"></i>
                   </a>
                   <a href="https://bbackronym.netlify.app/">
-                     <i class="fas fa-share-square"></i>
+                     <i class="fas fa-share-square" aria-label="link to website"></i>
                   </a>
                </div> <!-- end of .externalLink -->
             </div> <!-- end of .paradiv -->
@@ -230,10 +229,10 @@
                   accessible for screen readers.</p>
                <div class="externalLink">
                   <a href="https://github.com/jfrani5/soulful.git">
-                     <i class="fab fa-github"></i>
+                     <i class="fab fa-github" aria-label="link to github"></i>
                   </a>
                   <a href="https://soulfulsample.netlify.app/">
-                     <i class="fas fa-share-square"></i>
+                     <i class="fas fa-share-square" aria-label="link to website"></i>
                   </a>
                </div> <!-- end of .externalLink -->
             </div> <!-- end of .paradiv -->
