--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <title>Home Page</title>
    <link rel="stylesheet" href="styles/styles.css">
    <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
+   <link type="image" href="assets/from-studio-tikamon-site.PNG" rel="icon">
 </head>
 <body>
    <header class="indexHeader wrapper">
