--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
             </li>
             <li>
                <i class="fab fa-github" aria-hidden="true"></i>
-               <p>githib</p>
+               <p>github</p>
             </li>
             <li>
                <i class="fab fa-git-alt" aria-hidden="true"></i>
