few changes on spacings

--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
                   will get all the needed data from a third-party API and save that data to firebase which then will be retrieved to
                   have that data displayed on the page. App is responsive to all screen sizes and is accessible for screen readers.
                </p>
-               <p>Built with: Saana Selvan, Akeem Foster, Andre Shotwell</p>
+               <p>Built with: Saana Selvan, Akeem Foster, and Andre Shotwell</p>
                <div class="externalLink">
                   <a href="https://github.com/Juno-College-Project4/Backronym-Generator.git">
                      <i class="fab fa-github" aria-label="link to github"></i>
