--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
          <a href="about.html">See my work here ></a>
       </div> <!-- end of .seeWork -->
       
-      <div class="verticalText verticalLine"></div>
-      <h2 class="verticalIndex">01</h2>
-      <div class="dot"></div>
-      <div class="dot lighter"></div>
-      <div class="dot lightest"></div>
+      <div class="verticalLine omit"></div>
+      <h2 class="verticalIndex omit">01</h2>
+      <div class="dot omit"></div>
+      <div class="dot lighter omit"></div>
+      <div class="dot lightest omit"></div>
    </header>
 </body>
 </html>
