fixed spacing on footers

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
    </main>
    <!-- end of main -->
 
-   <footer>
+   <footer class="wrapper">
       <div><a href="index.html">< Home</a></div>
       <div><a href="projects.html">Projects ></a></div>
    </footer>
