--- a/projects.html
+++ b/projects.html
@@ -205,7 +205,7 @@
    </main>
    <!-- end of main -->
 
-   <footer>
+   <footer class="wrapper">
       <div><a href="about.html">< About</a></div>
       <div><a href="contact.html">Contact ></a></div>
    </footer>
