updated link for soulful project

--- a/projects.html
+++ b/projects.html
@@ -190,7 +190,7 @@
                   <a href="https://github.com/jfrani5/soulful.git">
                      <i class="fab fa-github" aria-label="link to github"></i>
                   </a>
-                  <a href="https://soulfulsample.netlify.app/">
+                  <a href="http://www.soulfulmacarons.ca/">
                      <i class="fas fa-share-square" aria-label="link to website"></i>
                   </a>
                </div> <!-- end of .externalLink -->
