edited arrow on footer

--- a/about.html
+++ b/about.html
@@ -116,8 +116,8 @@
    <!-- end of main -->
 
    <footer class="wrapper">
-      <div><a href="index.html">< Home</a></div>
-      <div><a href="projects.html">Projects ></a></div>
+      <div><a href="index.html">&#11013; Home</a></div>
+      <div><a href="projects.html">Projects &#10145;</a></div>
    </footer>
 </body>
 </html>
