--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
    <!-- end of main -->
 
    <footer class="wrapper contactFooter">
-      <div><a href="projects.html">< Projects</a></div>
+      <div><a href="projects.html">&#11013; Projects</a></div>
    </footer>
 </body>
 </html>
