--- a/projects.html
+++ b/projects.html
@@ -206,8 +206,8 @@
    <!-- end of main -->
 
    <footer class="wrapper">
-      <div><a href="about.html">< About</a></div>
-      <div><a href="contact.html">Contact ></a></div>
+      <div><a href="about.html">&#11013; About</a></div>
+      <div><a href="contact.html">Contact &#10145;</a></div>
    </footer>
 </body>
 </html>
