added 6th project on Project page

--- a/projects.html
+++ b/projects.html
@@ -202,6 +202,30 @@
                alt="a snapshot of the homepage of soulful website inside a mockup image of a laptop">
          </div>
       </section>
+
+      <section class="projects">
+         <div class="wholeText scroll slideLeft">
+            <div class="paraContainer six">
+               <h2>Creditpicks</h2>
+               <p>wordpress, elementor | 2022</p>
+            </div> <!-- end of .paraContainer -->
+      
+            <div class="paraDiv">
+               <p>About the project:</p>
+               <p>This project is from a freelance work that is built using Wordpress and an Elementor plugin. Website is responsive to all screen sizes and compatible with all web browsers. </p>
+               <div class="externalLink">
+                  <a href="https://creditpicks.com/">
+                     <i class="fas fa-share-square" aria-label="link to website"></i>
+                  </a>
+               </div> <!-- end of .externalLink -->
+            </div> <!-- end of .paradiv -->
+         </div> <!-- end of .wholeText -->
+      
+         <div class="imgDiv scroll fadeIn">
+            <img src="./assets/shotsnapp-creditpicks.png"
+               alt="a snapshot of the homepage of creditpicks website inside a mockup image of a laptop">
+         </div>
+      </section>
    </main>
    <!-- end of main -->
 
