added wordpress on skills section

--- a/about.html
+++ b/about.html
@@ -110,6 +110,10 @@
                <i class="fas fa-universal-access" aria-hidden="true"></i>
                <p>accessibility</p>
             </li>
+            <li>
+               <i class="fab fa-wordpress" aria-hidden="true"></i>
+               <p>wordpress</p>
+            </li>
          </ul>
       </section>
    </main>
